correcciones y avances, mas frondtend
