# parcial-practica/src/app/models/transaccion.ts
@@ -1,0 +1,8 @@
+export interface Transaccion {
+  _id?: string;
+  IdiomaOrigen: string;
+  TextoOrigen: string;
+  IdiomaDestino: string;
+  TextoDestino: string;
+  emailCliente: string;
+}
