# tp-backend-guari/src/controllers/socioController.js
@@ -1,6 +1,54 @@
 const Socio = require('../models/Socio');
+const Local = require('../models/Local');
 
 const socioCtrl = {};
+
+
+// post alta de socios con local
+socioCtrl.createSocioDos = async (req, res) => {
+    try {
+        const { nombre, apellido, foto, dni, numeroSocio, activo, localId } = req.body;
+        
+        const local = await Local.findByPk(localId);
+        if (!local) {
+            return res.status(404).json({ status: '0', msg: 'Local no encontrado.' });
+        }
+    
+        
+        const nuevoSocio = await Socio.create({
+            nombre,
+            apellido,
+            foto,
+            dni,
+            numeroSocio,
+            activo,
+            localId
+        });
+        
+        res.status(201).json({ status: '1', msg: 'Socio guardado.', data: nuevoSocio });
+    } catch (error) {
+        res.status(400).json({ 
+            status: '0', 
+            msg: 'Error procesando operacion.',
+            error: error.message 
+        });
+    }
+};
+
+
+// recuperacion de socios con sus locales
+socioCtrl.getSocios = async (req, res) => {
+    try {
+        const socios = await Socio.findAll({
+            include: [{ model: Local, as: 'local' }]
+        });
+        res.json(socios);
+    } catch (error) {
+        res.status(500).json({ status: '0', msg: 'Error al obtener los socios.' });
+    }
+};
+
+
 
 // POST - Dar de alta un Socio
 socioCtrl.createSocio = async (req, res) => {
@@ -15,17 +63,8 @@ socioCtrl.createSocio = async (req, res) => {
     } catch (error) {
         res.status(400).json({ status: '0', msg: 'Error procesando operacion.' });
     }
-};
+}; 
 
-// GET - Recuperar TODOS los Socios
-socioCtrl.getSocios = async (req, res) => {
-    try {
-        const socios = await Socio.findAll();
-        res.json(socios);
-    } catch (error) {
-        res.status(500).json({ status: '0', msg: 'Error al obtener los socios.' });
-    }
-};
 
 // DELETE - Eliminar un Socio
 socioCtrl.deleteSocio = async (req, res) => {
@@ -64,5 +103,6 @@ socioCtrl.getSociosActivos = async (req, res) => {
         res.status(500).json({ status: '0', msg: 'Error al obtener los socios activos.' });
     }
 };
+
 
 module.exports = socioCtrl;
